@@ -13,10 +13,8 @@
 <h1 class="title">Mathematics</h1>
 
 <p>Docutils supports inline math with the prefix or postfix <tt class="docutils literal">:math:</tt>
-role specificator, <span class="formula">
-<i>n</i>! + sin(<i>x</i><span class="scripts"><sup class="script">2</sup><sub class="script"><i>n</i></sub></span>)</span>
- and <span class="formula">
-<i>A</i><sub><span class="text">c</span></sub> = <span class="fraction"><span class="ignored">(</span><span class="numerator"><i>π</i></span><span class="ignored">)/(</span><span class="denominator">4</span><span class="ignored">)</span></span><i>d</i><sup>2</sup></span>
+role specificator, <span class="formula"><i>n</i>! + sin(<i>x</i><span class="scripts"><sup class="script">2</sup><sub class="script"><i>n</i></sub></span>)</span>
+ and <span class="formula"><i>A</i><sub><span class="text">c</span></sub> = <span class="fraction"><span class="ignored">(</span><span class="numerator"><i>π</i></span><span class="ignored">)/(</span><span class="denominator">4</span><span class="ignored">)</span></span><i>d</i><sup>2</sup></span>
 , as well as displayed math via the
 <cite>math</cite> directive:</p>
 <div class="formula">
@@ -59,8 +57,7 @@ See <a class="reference internal" href="#eq-m">eq:M</a> and <a class="reference 
 </span>
 </span><span class="array"><span class="arrayrow"><span class="bracket align-right">⎞</span></span><span class="arrayrow"><span class="bracket align-right">⎟</span></span><span class="arrayrow"><span class="bracket align-right">⎠</span></span></span>
 </div>
-<p>is <span class="formula">
-|<b>M</b>| = <i>ad</i> − <i>bc</i></span>
+<p>is <span class="formula">|<b>M</b>| = <i>ad</i> − <i>bc</i></span>
 .</p>
 <p>More than one display math block can be put in one math directive.
 For example, the following sum and integral with limits:</p>
@@ -76,8 +73,7 @@ directives:</p>
 <div class="formula" id="eq-schrodinger">
 <i>i</i>ℏ<span class="fraction"><span class="ignored">(</span><span class="numerator">∂</span><span class="ignored">)/(</span><span class="denominator">∂<i>t</i></span><span class="ignored">)</span></span>Ψ = <i>Ĥ</i>Ψ, 
 </div>
-<p>with the <em>wave function</em> <span class="formula">
-Ψ</span>
+<p>with the <em>wave function</em> <span class="formula">Ψ</span>
 , describes how the quantum state of a
 physical system changes in time.</p>
 <dl class="docutils">
@@ -89,44 +85,32 @@ physical system changes in time.</p>
 <col width="33%" />
 </colgroup>
 <tbody valign="top">
-<tr><td><span class="formula">
-<i>á</i></span>
+<tr><td><span class="formula"><i>á</i></span>
       <tt class="docutils literal">\acute{a}</tt></td>
-<td><span class="formula">
-<i>ṫ</i></span>
+<td><span class="formula"><i>ṫ</i></span>
         <tt class="docutils literal">\dot{t}</tt></td>
-<td><span class="formula">
-<i>γ̂</i></span>
+<td><span class="formula"><i>γ̂</i></span>
    <tt class="docutils literal"><span class="pre">\hat{\gamma}</span></tt></td>
 </tr>
-<tr><td><span class="formula">
-<i>à</i></span>
+<tr><td><span class="formula"><i>à</i></span>
       <tt class="docutils literal">\grave{a}</tt></td>
-<td><span class="formula">
-<i>ẗ</i></span>
+<td><span class="formula"><i>ẗ</i></span>
        <tt class="docutils literal">\ddot{t}</tt></td>
-<td><span class="formula">
-<i>α̃</i></span>
+<td><span class="formula"><i>α̃</i></span>
  <tt class="docutils literal"><span class="pre">\tilde{\alpha}</span></tt></td>
 </tr>
-<tr><td><span class="formula">
-<i>x̆</i></span>
+<tr><td><span class="formula"><i>x̆</i></span>
       <tt class="docutils literal">\breve{x}</tt></td>
-<td><span class="formula">
-<i>t⃛</i></span>
+<td><span class="formula"><i>t⃛</i></span>
       <tt class="docutils literal">\dddot{t}</tt></td>
-<td><span class="formula">
-<i>ı⃗</i></span>
+<td><span class="formula"><i>ı⃗</i></span>
    <tt class="docutils literal"><span class="pre">\vec{\imath}</span></tt></td>
 </tr>
-<tr><td><span class="formula">
-<i>ǎ</i></span>
+<tr><td><span class="formula"><i>ǎ</i></span>
       <tt class="docutils literal">\check{a}</tt></td>
-<td><span class="formula">
-<span class="bar"><i>a</i></span></span>
+<td><span class="formula"><span class="bar"><i>a</i></span></span>
         <tt class="docutils literal">\bar{a}</tt></td>
-<td><span class="formula">
-<i>R⃗</i></span>
+<td><span class="formula"><i>R⃗</i></span>
         <tt class="docutils literal">\vec{R}</tt></td>
 </tr>
 </tbody>
